--- a/tweetledum/css/styles.css
+++ b/tweetledum/css/styles.css
@@ -42,7 +42,7 @@ body {
   margin: 20px 0;
   width: 545px;
 }
-#load-more {
+#load-more, .bulk-save {
   width: 175px;
   margin: 20px 0 100px 0;
   color: #fff;
@@ -62,6 +62,19 @@ body {
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -webkit-appearance: button;
+}
+.bulk-save {
+  margin-bottom: 20px;
+}
+.bulk-input {
+  width: 300px;
+  clear: both;
+  font-size: 1rem;
+  line-height: 1.9;
+  padding: 0 4px;
+}
+.bulk-save.bulk-save--list {
+  margin-top: 5px;
 }
 .tweetledum-tweet {
   margin-bottom: 30px;
@@ -109,4 +122,29 @@ body {
   background-color: #ccc;
   border: 1px solid #999;
   border-radius: 0.25rem;
+}
+.tweetledum-bulk {
+  margin: 20px 0 0 60px;
+  width: 505px;
+}
+
+.bulk-mark-read td.checkbox {
+}
+.bulk-mark-read td.tweeter {
+}
+.bulk-mark-read td.count {
+  text-align: right;
+}
+.messages {
+  width: 400px;
+  border: 1px solid #3c763d;
+  padding: 10px;
+  color: #3c763d;
+  background-color: #dff0d8;
+  margin-bottom: 30px;
+}
+.messages.errors {
+  border-color: #a94442;
+  color: #a94442;
+  background-color: #f2dede;
 }
