--- a/tweetledum/css/styles.css
+++ b/tweetledum/css/styles.css
@@ -138,6 +138,15 @@ body {
 .bulk-mark-read td.count {
   text-align: right;
 }
+.lists-wrapper h3 {
+  margin-bottom: 0;
+}
+.lists-wrapper .lists ul {
+  padding-inline-start: 17px;
+}
+.list-fields {
+  margin-top: 30px;
+}
 .messages {
   width: 400px;
   border: 1px solid #3c763d;
